# xhec-mlops-2025-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile.app  PR_0.md  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.md
.github/workflows/: ci.yaml
notebooks/: eda.ipynb  modelling.ipynb
src/modelling/: main.py  preprocessing.py  training.py  utils.py  workflow.py
src/web_service/: app_config.py  main.py  utils.py
src/web_service/lib/: inference.py  models.py
src/web_service/local_objects/: regression_model.pkl  table_vectorizer.pkl
