[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
version = "0.0.1"
authors = [
  { name = "Basile Desjuzeur", email = "basile.desjuzeur@hec.edu" },
] # TODO: add authors here
description = "X-HEC MLOps Project on Abalone age prediction model"
requires-python = ">3.10" # TODO: update this version
dependencies = [
    "pre-commit>=4.3.0",
    "pydantic>=2.12.3",
    "ruff>=0.14.1",
]
