[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
version = "0.0.1"
authors = [
  { name = "Basile Desjuzeur", email = "basile.desjuzeur@hec.edu" },
  { name = "Paul Lacombe", email = "paul.lacombe@hec.edu" },
  { name = "Côme Malézieux", email = "come.malezieux@hec.edu" },
  { name = "Thomas Milcent", email = "thomas.milcent@hec.edu" },
  { name = "Nicolas Guillet", email = "nicolas.guillet@hec.edu" },
]
description = "X-HEC MLOps Project on Abalone age prediction model"
requires-python = ">3.11"
dependencies = [
    "pre-commit>=4.3.0",
    "pydantic>=2.12.3",
    "ruff>=0.14.1",
]
