[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
version = "0.0.1"
authors = [
  { name = "Basile Desjuzeur", email = "basile.desjuzeur@hec.edu" },
  { name = "Paul Lacombe", email = "paul.lacombe@hec.edu" },
  { name = "Côme Malézieux", email = "come.malezieux@hec.edu" },
  { name = "Thomas Milcent", email = "thomas.milcent@hec.edu" },
  { name = "Nicolas Guillet", email = "nicolas.guillet@hec.edu" },
]
description = "X-HEC MLOps Project on Abalone age prediction model"
requires-python = ">3.11"

dependencies = [
  "seaborn==0.12.2",
  "scikit-learn==1.5.2",
  "ipykernel==6.25.2",
  "pandas==2.1.1",
  "loguru==0.7.2",
  "mlflow==2.7.1",
  "pydantic>=1,<2",
  "uvicorn==0.23.2",
  "fastapi==0.103.2",
  "prefect==2.13.7",
  "pendulum>=2.1.2,<3.0.0",
  "griffe<1.0.0",
  "setuptools==80.9.0",
  "gdown==5.2.0",
]

[tool.setuptools.packages.find]
include = ["xhec_mlops_project_student*"]
exclude = ["data*", "assets*", "notebooks*", "tests*"]


[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
  "nbstripout>=0.8.1",
  "pip-tools>=7.5.0",
  "pre-commit==4.2.0",
  "ruff>=0.12.11",
]

[tool.ruff]
line-length = 130
exclude = ["lessons/best-practices"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["D", "ANN","E","W","F","N","Q","ARG","PTH",]
ignore = ["D417", "D100", "PD901", "N806", "N815", "N803", "ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
order-by-type = true
